# Copyright (c) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# deqp-gles2 build

import("//build/ohos.gni")
import("//third_party/vk-gl-cts/vk_gl_cts.gni")

config("deqp-gles2_config") {
  cflags_cc = deqp_common_cflags_cc
  defines = deqp_common_defines
}

ohos_source_set("deqp-gles2_source") {
  sources = [
    "//third_party/vk-gl-cts/modules/gles2/tes2CapabilityTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/tes2CapabilityTests.hpp",
    "//third_party/vk-gl-cts/modules/gles2/tes2Context.cpp",
    "//third_party/vk-gl-cts/modules/gles2/tes2Context.hpp",
    "//third_party/vk-gl-cts/modules/gles2/tes2InfoTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/tes2InfoTests.hpp",
    "//third_party/vk-gl-cts/modules/gles2/tes2TestCase.cpp",
    "//third_party/vk-gl-cts/modules/gles2/tes2TestCase.hpp",
    "//third_party/vk-gl-cts/modules/gles2/tes2TestPackage.cpp",
    "//third_party/vk-gl-cts/modules/gles2/tes2TestPackage.hpp",

  ]
  include_dirs = [
    "//third_party/vk-gl-cts/modules/gles2/accuracy",
    "//third_party/vk-gl-cts/modules/gles2/functional",
    "//third_party/vk-gl-cts/modules/gles2/performance",
    "//third_party/vk-gl-cts/modules/gles2/stress",
    "//third_party/vk-gl-cts/modules/glshared",
    "//third_party/vk-gl-cts/modules/gles2",
  ]

  include_dirs += deqp_common_include_dirs

  deps = [
    "//third_party/vk-gl-cts/modules/gles2/accuracy:libdeqp-gles2-accuracy",
    "//third_party/vk-gl-cts/modules/gles2/functional:libdeqp-gles2-functional",
    "//third_party/vk-gl-cts/modules/gles2/performance:libdeqp-gles2-performance",
    "//third_party/vk-gl-cts/modules/gles2/stress:libdeqp-gles2-stress",
    "//third_party/vk-gl-cts/framework/common:libdeqp_tcutil",
    "//third_party/vk-gl-cts/framework/opengl:libdeqp_glutil",
    "//third_party/vk-gl-cts/framework/opengl/wrapper:libdeqp_glwrapper",
    "//third_party/zlib:libz",
    "//third_party/libpng:libpng",
  ]

  configs = [ ":deqp-gles2_config" ]
#   lib_dirs = [
#     "//third_party/vk-gl-cts/outlibs"
#   ]
#   libs = [
#     "png",
#     "z",
#     # "glslang",
#     # "SPIRV",
#     # "SPVRemapper",
#     # "spirv-tools",
#     # "spirv-tools-link",
#     # "spirv-tools-lint",
#     # "spirv-tools-opt",
#     # "spirv-tools-reduce",
#     # "MachineIndependent",
#     # "OGLCompiler",
#     # "OSDependent",
#     # "GenericCodeGen",
#   ]
}

ohos_static_library("libdeqp-gles2") {
  deps = [ ":deqp-gles2_source" ]
  part_name = "graphic_standard"
  subsystem_name = "graphic"
}
