# Copyright (c) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# modules deqp-gl-shared build

import("//build/ohos.gni")
import("//third_party/VK-GL-CTS/vk_gl_cts.gni")

config("deqp-gl-shared_config") {
  cflags_cc = deqp_common_cflags_cc
  defines = deqp_common_defines
}

ohos_source_set("deqp-gl-shared_source") {
  sources = [
    "//third_party/VK-GL-CTS/modules/glshared/glsAttributeLocationTests.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsBufferTestUtil.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsBuiltinPrecisionTests.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsCalibration.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsDrawTest.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsFboCompletenessTests.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsFboUtil.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsFragOpInteractionCase.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsFragmentOpUtil.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsInteractionTestUtil.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsLifetimeTests.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsLongStressCase.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsLongStressTestUtil.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsMemoryStressCase.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsRandomShaderCase.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsRandomShaderProgram.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsRandomUniformBlockCase.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsSamplerObjectTest.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsScissorTests.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsShaderConstExprTests.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsShaderExecUtil.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsShaderLibrary.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsShaderLibraryCase.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsShaderPerformanceCase.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsShaderPerformanceMeasurer.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsShaderRenderCase.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsStateChangePerfTestCases.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsStateQueryUtil.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsTextureBufferCase.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsTextureStateQueryTests.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsTextureTestUtil.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsUniformBlockCase.cpp",
    "//third_party/VK-GL-CTS/modules/glshared/glsVertexArrayTests.cpp",

  ]
  include_dirs = [
    "//third_party/VK-GL-CTS/modules/glshared",

  ]
  include_dirs += deqp_common_include_dirs
  deps = [
    "//third_party/VK-GL-CTS/framework/opengl:libdeqp_glutil",
    "//third_party/VK-GL-CTS/framework/opengl/wrapper:libdeqp_glwrapper",
    "//third_party/VK-GL-CTS/framework/randomshaders:libdeqp_randomshaders",
    "//third_party/VK-GL-CTS/framework/common:libdeqp_tcutil",
    "//third_party/VK-GL-CTS/framework/opengl/simplereference:libdeqp_glutil-sglr",
    "//third_party/zlib:libz",
    "//third_party/libpng:libpng",
  ]

  configs = [ ":deqp-gl-shared_config" ]

#   lib_dirs = [
#     "//third_party/VK-GL-CTS/outlibs"
#   ]
#   libs = [
#     "png",
#     "z",
#     # "glslang",
#     # "SPIRV",
#     # "SPVRemapper",
#     # "SPIRV-Tools",
#     # "SPIRV-Tools-link",
#     # "SPIRV-Tools-lint",
#     # "SPIRV-Tools-opt",
#     # "SPIRV-Tools-reduce",
#     # "MachineIndependent",
#     # "OGLCompiler",
#     # "OSDependent",
#     # "GenericCodeGen",
#   ]
}

ohos_static_library("libdeqp-gl-shared") {
  deps = [ ":deqp-gl-shared_source" ]
  part_name = "graphic_standard"
  subsystem_name = "graphic"
}
