# Copyright (c) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# deqp framwork delib debase build

import("//build/ohos.gni")
import("//third_party/vk-gl-cts/vk_gl_cts.gni")

config("deqp_delib_debase_config") {
  cflags = deqp_common_cflags
  defines = deqp_common_defines
  defines += [
    "FE_DOWNWARD=0x00800000", 
    "FE_TONEAREST=0x00000000", 
    "FE_TOWARDZERO=0x00c00000", 
    "FE_UPWARD=0x00400000", 
    "_XOPEN_SOURCE=600"
  ]
}

ohos_source_set("deqp_delib_debase_source") {
  sources = [
    "//third_party/vk-gl-cts/framework/delibs/debase/deFloat16Test.c",  
    "//third_party/vk-gl-cts/framework/delibs/debase/deMath.c",        
    "//third_party/vk-gl-cts/framework/delibs/debase/deRandom.c",  
    "//third_party/vk-gl-cts/framework/delibs/debase/deDefs.c",                
    "//third_party/vk-gl-cts/framework/delibs/debase/deInt32.c",        
    "//third_party/vk-gl-cts/framework/delibs/debase/deMathTest.c",    
    "//third_party/vk-gl-cts/framework/delibs/debase/deSha1.c",    
    "//third_party/vk-gl-cts/framework/delibs/debase/deFloat16.c",             
    "//third_party/vk-gl-cts/framework/delibs/debase/deInt32Test.c",    
    "//third_party/vk-gl-cts/framework/delibs/debase/deMemory.c",           
    "//third_party/vk-gl-cts/framework/delibs/debase/deString.c"
  ]

  include_dirs = deqp_common_include_dirs

  configs = [ ":deqp_delib_debase_config" ]
}

ohos_static_library("libdeqp_debase") {
  deps = [ ":deqp_delib_debase_source" ]
  part_name = "graphic_standard"
  subsystem_name = "graphic"
}

