# Copyright (c) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# deqp framwork delib depool build

import("//build/ohos.gni")
import("//third_party/vk-gl-cts/vk_gl_cts.gni")

config("deqp_delib_depool_config") {
  cflags = deqp_common_cflags
  defines = deqp_common_defines
}

ohos_source_set("deqp_delib_depool_source") {
  sources = [
    "//third_party/vk-gl-cts/framework/delibs/depool/dePoolHashArray.c",  
    "//third_party/vk-gl-cts/framework/delibs/depool/dePoolHeap.c",      
    "//third_party/vk-gl-cts/framework/delibs/depool/dePoolStringBuilder.c",  
    "//third_party/vk-gl-cts/framework/delibs/depool/deMemPool.c",                  
    "//third_party/vk-gl-cts/framework/delibs/depool/dePoolHash.c",       
    "//third_party/vk-gl-cts/framework/delibs/depool/dePoolMultiSet.c",  
    "//third_party/vk-gl-cts/framework/delibs/depool/dePoolTest.c",           
    "//third_party/vk-gl-cts/framework/delibs/depool/dePoolArray.c",  
    "//third_party/vk-gl-cts/framework/delibs/depool/dePoolHashSet.c",    
    "//third_party/vk-gl-cts/framework/delibs/depool/dePoolSet.c", 
    
  ]

  include_dirs = deqp_common_include_dirs
  deps = [  
   "//third_party/vk-gl-cts/framework/delibs/debase:libdeqp_debase",
  ]

  configs = [ ":deqp_delib_depool_config" ]
}

ohos_static_library("libdeqp_depool") {
  deps = [ ":deqp_delib_depool_source" ]
  part_name = "graphic_standard"
  subsystem_name = "graphic"
}

