# Copyright (c) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# framework eglwrapper build

import("//build/ohos.gni")
import("//third_party/VK-GL-CTS/vk_gl_cts.gni")

config("eglwrapper_config") {
  cflags_cc = deqp_common_cflags_cc
  defines = deqp_common_defines
}

ohos_source_set("eglwrapper_source") {
  sources = [
    "//third_party/VK-GL-CTS/framework/egl/wrapper/eglwDefs.cpp",
    "//third_party/VK-GL-CTS/framework/egl/wrapper/eglwFunctions.cpp",
    "//third_party/VK-GL-CTS/framework/egl/wrapper/eglwLibrary.cpp",
    "//third_party/VK-GL-CTS/framework/egl/wrapper/eglwWrapper.cpp",
  ]
  include_dirs = deqp_common_include_dirs

  deps = [
    "//third_party/VK-GL-CTS/framework/delibs/debase:libdeqp_debase",
    "//third_party/VK-GL-CTS/framework/delibs/deutil:libdeqp_deutil",
    "//third_party/VK-GL-CTS/framework/delibs/decpp:libdeqp_decpp",

    "//third_party/VK-GL-CTS/framework/opengl:libdeqp_glutil",
    "//third_party/VK-GL-CTS/framework/common:libdeqp_tcutil",
    "//third_party/zlib:libz",
    "//third_party/libpng:libpng",
  ]

  configs = [ ":eglwrapper_config" ]

#   lib_dirs = [
#     "//third_party/VK-GL-CTS/outlibs"
#   ]
#   libs = [
#     "png",
#     "z",
#     # "glslang",
#     # "SPIRV",
#     # "SPVRemapper",
#     # "SPIRV-Tools",
#     # "SPIRV-Tools-link",
#     # "SPIRV-Tools-lint",
#     # "SPIRV-Tools-opt",
#     # "SPIRV-Tools-reduce",
#     # "MachineIndependent",
#     # "OGLCompiler",
#     # "OSDependent",
#     # "GenericCodeGen",
#   ]

}

ohos_static_library("libdeqp_eglwrapper") {
    deps = [ ":eglwrapper_source" ]
    part_name = "graphic_standard"
    subsystem_name = "graphic"
}